hphp/test/zend/good/ext/mbstring/tests/mb_ereg_variation2.php.skipif
<?php
extension_loaded('mbstring') or die('skip');
function_exists('mb_ereg') or die("skip mb_ereg() is not available in this build");
?>