hphp/test/zend/bad/ext/iconv/tests/iconv_mime_decode_variation3.php.skipif
<?php
extension_loaded('iconv') or die('skip');
function_exists('iconv_mime_decode') or die("skip iconv_mime_decode() is not available in this build");
?>